# mapentropy

./: CMakeLists.txt  LICENSE  README.md  package.xml
include/map_entropy/: entropy_point_types.h  map_entropy.h
launch/: mean_map_entropy.launch
src/: map_entropy.cpp  mean_map_entropy.cpp  mean_map_entropy_node.cpp
